--- a/project.config
+++ b/project.config
@@ -1,20 +1,19 @@
 [access]
-	inheritFrom = All-Projects
-[access "refs/*"]
-	owner = group user/Brad Bishop (bradbishop)
-[access "refs/for/refs/*"]
-	read = group user/Brad Bishop (bradbishop)
-	push = group user/Brad Bishop (bradbishop)
-	label-Code-Review = -2..+2 group user/Brad Bishop (bradbishop)
-	label-Verified = -1..+1 group user/Brad Bishop (bradbishop)
-	rebase = group user/Brad Bishop (bradbishop)
-	removeReviewer = group user/Brad Bishop (bradbishop)
-	submit = group user/Brad Bishop (bradbishop)
+	inheritFrom = openbmc-all-repos
 [access "refs/heads/*"]
-	read = group user/Brad Bishop (bradbishop)
-	create = group user/Brad Bishop (bradbishop)
-	push = +force group user/Brad Bishop (bradbishop)
-	pushMerge = group user/Brad Bishop (bradbishop)
+	create = group github/openbmc/ibm-pldm-oem-maintainers
+	push = +force group github/openbmc/ibm-pldm-oem-maintainers
+	abandon = group github/openbmc/ibm-pldm-oem-maintainers
+	forgeCommitter = group github/openbmc/ibm-pldm-oem-maintainers
+	label-Code-Review = -2..+2 group github/openbmc/ibm-pldm-oem-maintainers
+	label-Ok-To-Test = +0..+1 group github/openbmc/ibm-pldm-oem-maintainers
+	label-Verified = -1..+1 group github/openbmc/ibm-pldm-oem-maintainers
+	rebase = group github/openbmc/ibm-pldm-oem-maintainers
+	submit = group github/openbmc/ibm-pldm-oem-maintainers
+	editTopicName = group github/openbmc/ibm-pldm-oem-maintainers
 [access "refs/tags/*"]
-	push = group user/Brad Bishop (bradbishop)
-	push = +force group user/Brad Bishop (bradbishop)
+	push = +force group github/openbmc/ibm-pldm-oem-maintainers
+	createTag = group github/openbmc/ibm-pldm-oem-maintainers
+	createSignedTag = group github/openbmc/ibm-pldm-oem-maintainers
+[submit]
+	action = rebase if necessary
