Implement File I/O attribute table
This patch provides the framework for PLDM File I/O commands. Interface is
provided to lookup file information based on the file handle. This interface
will be consumed by the ReadFileIntoMemory and WriteFileFromMemory commands.
Interface is provided to read the file attribute table to be used by the
GetFileTable command.

This commit doesn't have support for implementing UpdateFileTable command.

Change-Id: Iad9c7f05589d26401bf7083ec87d13e3296a485b
Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>

--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -1,7 +1,8 @@
 libpldmoemresponder_LTLIBRARIES = libpldmoemresponder.la
 libpldmoemresponderdir = ${libdir}
 libpldmoemresponder_la_SOURCES = \
-	file_io.cpp
+	file_io.cpp \
+	file_table.cpp
 
 libpldmoemresponder_la_LIBADD = \
 	../libpldm/libpldmoem.la
