Modified project settings

--- a/project.config
+++ b/project.config
@@ -17,3 +17,5 @@
 	createSignedTag = group github/openbmc/ibm-pldm-oem-maintainers
 [submit]
 	action = rebase if necessary
+[project]
+	state = hidden
